Opened 9 years ago

Closed 9 years ago

Last modified 9 years ago

#12628 closed bug (fixed)

[regression] BBox title text has white edges

Reported by: waddlesplash Owned by: looncraz
Priority: blocker Milestone: R1/beta1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Essentially the same problem as the Deskbar Clock bug.

Attachments (1)

Patch-12628.patch (1.5 KB ) - added by looncraz 9 years ago.
Sets BBox low color properly for legacy applications.

Download all attachments as: .zip

Change History (9)

comment:1 by looncraz, 9 years ago

I won't have time to address this in a proper patch for a while (I have to repair my virtualization setup after a system upgrade), but I believe the fix would be to change BBox::AttachedToWindow() to have the following:

AdoptParentColors();

if(Parent() == NULL [OR] ViewColor() == B_TRANSPARENT_COLOR)

AdoptSystemColors();

It has something that *almost* does that at this time, but it doesn't take into account a potentially NULL parent.

In addition, changing the SetViewUIColor(B_PANEL_BACKGROUND_COLOR); line (662) to AdoptSystemColors() would probably be a good idea.

Last edited 9 years ago by looncraz (previous) (diff)

comment:2 by waddlesplash, 9 years ago

Cc: looncraz removed
Owner: changed from axeld to looncraz
Status: newassigned

by looncraz, 9 years ago

Attachment: Patch-12628.patch added

Sets BBox low color properly for legacy applications.

comment:3 by looncraz, 9 years ago

patch: 01

comment:4 by waddlesplash, 9 years ago

Resolution: fixed
Status: assignedclosed

Applied in hrev50421. Thanks!

comment:5 by diver, 9 years ago

FilWip now has white text background in preferences window. Related?

comment:6 by diver, 9 years ago

Sorry, I meant Beezer.

in reply to:  6 ; comment:7 by looncraz, 9 years ago

Replying to diver:

Sorry, I meant Beezer.

Hmm, I see that. I think those are BStringViews... I will dig into that in a few hours. If I find it is something different (seems so), I'll make a ticket and patch and reference it here.

in reply to:  7 comment:8 by looncraz, 9 years ago

Replying to looncraz:

Replying to diver:

Sorry, I meant Beezer.

Hmm, I see that. I think those are BStringViews... I will dig into that in a few hours. If I find it is something different (seems so), I'll make a ticket and patch and reference it here.

ticket:12868

Note: See TracTickets for help on using tickets.